--- a/index.html
+++ b/index.html
@@ -155,10 +155,17 @@
 
     <section id="recipes">
       <h2>Recipes</h2>
-      <ul>
-        <li><strong>Burning Powder</strong>: 1x Charcoal → 15x Burning Powder (20F)</li>
-        <li><strong>Gem Wax</strong>: 2x Resin → 15x Gem Wax (20F)</li>
-      </ul>
+      <table id="recipes-table">
+        <thead>
+          <tr>
+            <th>Source</th>
+            <th>Item</th>
+            <th>Cost</th>
+            <th>Currency</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </section>
 
     <section id="cost">
