--- a/index.html
+++ b/index.html
@@ -308,37 +308,43 @@ function createTableSection(filename, headers, rows) {
 
 // Main: automatically find and load all CSVs in /data/
 async function loadAllCSVs() {
-  try {
-    // 1️⃣ Fetch directory listing (only works from server, not file://)
-    const resp = await fetch(DATA_DIR + "/");
-    const text = await resp.text();
+  const DATA_DIR = "./data";
 
-    // 2️⃣ Extract .csv filenames (works with Python or VSCode live server)
-    const csvFiles = [...text.matchAll(/href="([^"]+\.csv)"/g)]
-      .map(m => m[1])
-      .filter(name => !name.startsWith("?") && !name.includes("Parent"));
+  // Fetch file list manually from index.json
+  const resp = await fetch(`${DATA_DIR}/index.json`);
+  if (!resp.ok) {
+    document.getElementById("csv-output").innerHTML = `<p style="color:red;">❌ Error: Could not load data/index.json</p>`;
+    return;
+  }
 
-    if (csvFiles.length === 0) {
-      document.querySelector("main").innerHTML +=
-        "<p>No CSV files found in /data/ folder.</p>";
-      return;
-    }
+  const { files } = await resp.json();
+  if (!files || files.length === 0) {
+    document.getElementById("csv-output").innerHTML = `<p>No CSV files listed in index.json.</p>`;
+    return;
+  }
 
-    // 3️⃣ Load each CSV and display it
-    for (const file of csvFiles) {
-      const rows = await loadCSV(`${DATA_DIR}/${file}`);
-      if (rows.length === 0) continue;
-      const headers = Object.keys(rows[0]);
-      createTableSection(file, headers, rows);
-    }
-  } catch (err) {
-    console.error("Auto-load failed. Some servers block directory listing.", err);
-    document.querySelector("main").innerHTML +=
-      `<p class="note">⚠️ Auto-loading disabled on this server. Add CSVs manually or list them in script.</p>`;
+  const container = document.getElementById("csv-output");
+  container.innerHTML = "";
+
+  for (const file of files) {
+    const res = await fetch(`${DATA_DIR}/${file}`);
+    if (!res.ok) continue;
+    const text = await res.text();
+    const rows = text.trim().split("\n").map(r => r.split(","));
+    const table = document.createElement("table");
+    table.innerHTML = `
+      <caption>${file}</caption>
+      ${rows.map((row, i) =>
+        `<tr>${row.map(cell =>
+          `<${i === 0 ? "th" : "td"}>${cell.trim()}</${i === 0 ? "th" : "td"}>`
+        ).join("")}</tr>`
+      ).join("")}
+    `;
+    container.appendChild(table);
   }
 }
 
-window.addEventListener("DOMContentLoaded", loadAllCSVs);
+loadAllCSVs();
 
 
 document.addEventListener("click", async e => {
