--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@ document.addEventListener("click", async e=>{
     details.innerHTML = html;
 });
 
-document.getElementById("modal-close").addEventListener("click", ()=>modal.classList.add("hidden"));
+document.getElementById("modal-close").addEventListener("click", () => {
+    const modal = document.getElementById("item-modal");
+    modal.classList.add("hidden");
+});
 </script>
 
   
